--- a/style.css
+++ b/style.css
@@ -121,6 +121,14 @@ footer:first-child {
 	text-align: left;
 }
 
+.sharelabel {
+	margin: 0;
+}
+
+.fa-arrow-down {
+	display: contents;
+}
+
 .social {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -282,7 +290,6 @@ i {
 }
 
 h3 {
-	/* margin-bottom: 10%; */
 	margin: 0 0 var(--vmargin) 0;
 	text-align: center;
 }
@@ -301,13 +308,14 @@ input[type=checkbox], input[type=radio] {
 }
 
 
+
 /* IcoMoon icon font styles */
 @font-face {
 	font-family: 'icomoon';
 	src:
-		url('fonts/icomoon.ttf?ycner8') format('truetype'),
-		url('fonts/icomoon.woff?ycner8') format('woff'),
-		url('fonts/icomoon.svg?ycner8#icomoon') format('svg');
+		url('fonts/icomoon.ttf?gps37i') format('truetype'),
+		url('fonts/icomoon.woff?gps37i') format('woff'),
+		url('fonts/icomoon.svg?gps37i#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -327,6 +335,10 @@ i {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.fa-arrow-down:before {
+	content: '\e904';
+	font-size: 1rem;
+}
 .fa-envelope-square:before {
 	content: '\e903';
 }
