--- a/style.css
+++ b/style.css
@@ -264,9 +264,9 @@ i {
 	-webkit-box-direction: normal;
 			-ms-flex-direction: column;
 					flex-direction: column;
-	-webkit-box-pack: space-evenly;
-			-ms-flex-pack: space-evenly;
-					justify-content: space-evenly;
+	-webkit-box-pack: space-between;
+			-ms-flex-pack: space-between;
+					justify-content: space-between;
 	position: fixed;
 	background: var(--primary);
 	width: var(--sidebarwidth);
@@ -290,7 +290,7 @@ i {
 }
 
 h3 {
-	margin: 0 0 var(--vmargin) 0;
+	margin: 0;
 	text-align: center;
 }
 
@@ -300,11 +300,15 @@ input[type=checkbox], input[type=radio] {
 }
 
 .padding {
-	height: 1%;
+	height: 4%;
 }
 
 .sidebar > p {
 	margin-top: 0;
+}
+
+.badge {
+	text-align: center;
 }
 
 
