--- a/style.css
+++ b/style.css
@@ -52,9 +52,13 @@ textarea::-webkit-scrollbar-thumb {
 	box-shadow: .05em .05em .1em rgba(0,0,0,.5);
 }
 
-html, body, .container {
-	width: 100%;
+body {
 	margin: 0;
+	background: var(--bg);
+}
+
+.container {
+	min-height: 100dvh;
 }
 
 .container {
@@ -243,16 +247,13 @@ textarea:focus {
 .table {
 	display: -ms-grid;
 	display: grid;
-	-webkit-box-flex: 1;
-	-webkit-flex: 1;
-			-ms-flex: 1;
-					flex: 1;
 	-ms-grid-columns: auto auto auto auto;
 	grid-template-columns: auto auto auto auto;
 	-ms-grid-rows: auto auto;
 	grid-template-rows: auto auto;
 	margin: var(--hmargin) var(--vmargin);
-	padding: .8em;
+	padding: 1.5em;
+	gap: .5em;
 	background: var(--primary);
 	color: var(--text);
 	-webkit-border-radius: var(--roundness);
