--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -215,6 +215,12 @@ textarea:focus {
 	background: var(--focus);
 }
 
+/* Ensure image don't overflow their container */
+img {
+	max-width: 100%;
+	max-height: 100%;
+}
+
 .table {
 	display: flex;
 	flex-direction: row;
