--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -8,9 +8,6 @@
 
 	--hmargin: 1%;
 	--vmargin: 4%;
-	--roundness: .8rem;
-	--textsize: 1rem;
-	--numsize: .9em;
 
 	--padding-sm: .75em;
 	--padding-base: 1.5em;
@@ -49,6 +46,24 @@
 .pulse {
 	animation: pulse var(--transition-duration-base) ease-out;
 }
+
+p.alert {
+	border-radius: var(--border-radius-base);
+	padding: var(--padding-base);
+}
+
+p.alert.note {
+	border: 1px solid var(--text);
+}
+
+p.alert.note::before {
+	content: 'ⓘ Note';
+	display: block;
+	padding-bottom: var(--padding-sm);
+	color: var(--color-text);
+	font-weight: bold;
+}
+
 
 /* Other styles */
 /* ------------ */
@@ -104,9 +119,6 @@ body {
 	min-height: 100dvh;
 	align-items: center;
 	text-align: center;
-	font-size: 1.5em;
-	cursor: default;
-	overflow: hidden;
 }
 
 header,
@@ -200,15 +212,15 @@ textarea {
 	flex: 1;
 	border: none;
 	outline: none;
-	border-radius: var(--roundness);
+	border-radius: var(--border-radius-base);
 	padding: 1.5em;
 	background: var(--primary);
 	color: var(--text);
 	box-shadow: .05em .05em .1em var(--bg) inset;
-	font-size: .7em;
-	resize: none;
 	font-family: var(--font-family-base);
+	font-size: var(--font-size-base);
 	font-weight: var(--font-weight-base);
+	resize: none;
 }
 
 textarea:focus {
@@ -231,7 +243,7 @@ img {
 	gap: .5em;
 	background: var(--primary);
 	color: var(--text);
-	border-radius: var(--roundness);
+	border-radius: var(--border-radius-base);
 	box-shadow: .05em .05em .1em var(--bg);
 }
 
@@ -273,14 +285,17 @@ label {
 
 p {
 	margin: 0;
-	font-size: var(--textsize);
 	text-shadow: .04em .04em .07em var(--color-shadow);
 }
 
 output {
 	font-family: var(--font-family-header);
-	font-size: var(--numsize);
+	font-size: var(--font-size-lg);
 	font-weight: bold;
+}
+
+ul {
+	margin-bottom: 0;
 }
 
 input[type='checkbox'],
