--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -8,6 +8,9 @@
 	--color-selection: rgba(0, 0, 0, 0.5);
 	--color-primary: #60a5fa;
 
+	--color-mix-ratio-sm: 2.5%;
+	--color-mix-ratio-base: 50%;
+
 	--opacity-min: 0;
 	--opacity-hover: .7;
 	--opacity-max: 1;
@@ -33,7 +36,7 @@
 
 	--max-width-page: 56rem;
 
-	--min-height-textarea: 16rem;
+	--min-height-textarea: 18rem;
 
 	--border-width-base: 1px;
 
@@ -81,7 +84,7 @@ p.alert.note {
 p.alert.note::before {
 	content: 'ⓘ Note';
 	display: block;
-	padding-bottom: var(--padding-sm);
+	padding-block-end: var(--padding-sm);
 	color: var(--color-primary);
 	font-weight: var(--font-weight-bold);
 }
@@ -123,7 +126,7 @@ textarea::placeholder {
 	color: color-mix(
 		in oklch shorter hue,
 		var(--color-text),
-		transparent 50%);
+		transparent var(--color-mix-ratio-base));
 }
 
 /* Base styles */
@@ -147,12 +150,12 @@ body {
 	--color-base-3: color-mix(
 		in oklch shorter hue,
 		var(--color-base-2),
-		var(--color-text) 2.5%
+		var(--color-text) var(--color-mix-ratio-sm)
 	);
 	--color-selection: color-mix(
 		in oklch shorter hue,
 		var(--color-primary),
-		transparent 50%
+		transparent var(--color-mix-ratio-base)
 	);
 }
 
@@ -183,7 +186,7 @@ header {
 	align-items: center;
 	gap: var(--padding-base);
 	width: fit-content;
-	margin-top: var(--padding-lg);
+	margin-block-start: var(--padding-lg);
 	margin-inline: var(--padding-base);
 }
 
@@ -201,7 +204,7 @@ footer {
 
 footer > * {
 	flex: 1;
-	min-width: 18rem;
+	min-width: var(--min-height-textarea);
 }
 
 a:link {
@@ -305,7 +308,7 @@ p {
 }
 
 ul {
-	margin-bottom: 0;
+	margin-block-end: 0;
 }
 
 output {
